--- a/CSS/style.css
+++ b/CSS/style.css
@@ -517,6 +517,16 @@ body {
     margin-left: 8px;
 }
 
+.filter-button .button {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: var(--letter-spacing-body);
+}
+
 .button {
     color: var(--black-color);
     text-align: center;
